kind-linux-gateway-api/k8s/gateway-api-argocd.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: argocd
spec:
  gatewayClassName: nginx
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    hostname: "argocd.prgs-corp.xyz"

  - name: https
    protocol: HTTPS
    port: 443
    hostname: "argocd.prgs-corp.xyz"
    tls:
      mode: Terminate
      certificateRefs:
        - kind: Secret
          name: argocd-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-backend
  namespace: argocd
spec:
  parentRefs:
    - name: gateway
      sectionName: https
  hostnames:
    - argocd.prgs-corp.xyz
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argo-cd-argocd-server
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-redirect
  namespace: argocd
spec:
  parentRefs:
    - name: gateway
      sectionName: http
  hostnames:
    - argocd.prgs-corp.xyz
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
